--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "start": "webpack serve --config webpack.config.js  --port 3001 --open",
-    "build": "webpack"
+    "start": "webpack serve --config webpack/webpack.config.js --env env=dev",
+    "build": "webpack --config webpack/webpack.config.js --env env=prod"
   },
   "keywords": [],
   "author": "",
@@ -22,6 +22,7 @@
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
     "@babel/preset-typescript": "^7.16.7",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.5",
     "@reduxjs/toolkit": "^1.8.1",
     "@types/react": "^17.0.43",
     "@types/react-dom": "^17.0.14",
@@ -29,10 +30,12 @@
     "css-loader": "^6.7.1",
     "html-webpack-plugin": "^5.5.0",
     "react-redux": "^7.2.8",
+    "react-refresh": "^0.12.0",
     "style-loader": "^3.3.1",
     "typescript": "^4.6.3",
     "webpack": "^5.71.0",
     "webpack-cli": "^4.9.2",
-    "webpack-dev-server": "^4.7.4"
+    "webpack-dev-server": "^4.7.4",
+    "webpack-merge": "^5.8.0"
   }
 }
