--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
     "@babel/preset-typescript": "^7.16.7",
+    "@mui/icons-material": "^5.6.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.5",
     "@reduxjs/toolkit": "^1.8.1",
     "@types/react": "^17.0.43",
@@ -31,6 +32,7 @@
     "html-webpack-plugin": "^5.5.0",
     "react-redux": "^7.2.8",
     "react-refresh": "^0.12.0",
+    "react-router-dom": "^6.3.0",
     "style-loader": "^3.3.1",
     "typescript": "^4.6.3",
     "webpack": "^5.71.0",
